# aleym_core

./: .gitattributes  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  justfile
.github/workflows/: lint.yml  publish_release.yml  test.yml
src/: error.rs  impl_scheduler.rs  lib.rs
src/db/: error.rs  impl_migration.rs  impl_news_recommendation.rs  impl_news_storage.rs  impl_signals_storage.rs  impl_source_storage.rs  mod.rs
src/db/entities/: mod.rs  news.rs  news_apearance_signal.rs  news_explicit_vote_signal.rs  news_focus_signal.rs  news_label.rs  news_read_signal.rs  news_to_label_link.rs  prelude.rs  source.rs  source_category.rs  source_directory.rs  source_fetch_signal.rs  source_to_category_link.rs  source_to_source_category_link.rs
src/db/migration/: README.md  m20260227_022357_create_sources_storage.rs  m20260305_015253_create_news_storage.rs  m20260327_004812_create_signals_storage.rs  mod.rs
src/inform/: error.rs  feedrs.rs  mod.rs  telegram_web.rs  utils.rs
src/ml/: error.rs  mod.rs  recommendation.rs  scheduler.rs
src/models/: informant.rs  news_item.rs
src/net/: error.rs  exposed_proxy.rs  mod.rs
src/net/client/: impl_http.rs  mod.rs
src/net/interfaces/: clear.rs  mod.rs  tor.rs
src/net/protocols/: http.rs  mod.rs
src/net/transports/: mod.rs  tcp.rs  tls.rs
src/repositories/: informant_repository.rs  news_item_repository.rs
src/services/: informant_service.rs
test/assets/: example_telegram_channel_feed.html
tools/db_manager/: Cargo.toml
tools/db_manager/src/: main.rs
